--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Game/Map/Menu.Menu
-EditorStartupMap=/Game/Map/Map.Map
+EditorStartupMap=/Game/Map/Menu.Menu
 GlobalDefaultGameMode=/Game/Player/MyGameMode.MyGameMode_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
